Changes
=======

1.3.0 (TBD)
-----------

- Building from source now requires Cython (#2016).

1.2.1 (2021-03-03)
------------------

- Cast rio-calc's nodata option before filling rasters (#2110).
- The rio-clip command only works on rasters with rectilinear geo transforms.
  This is noted in the command's help and an error will be raised if the
  requirement is not met (#2115).
- Support for geotransforms with rotation in Window.from_bounds and
  feature.geometry_window has been added (#2112).
- Fix an off-by-one error in the merge tool (#2106, #2109).

1.2.0 (2021-01-25)
------------------

Note well: Python versions before 3.6 are no longer supported by this project.

New features:

- Binary wheels on PyPI include PROJ 7.2.1 and GDAL 3.2.1.
- Support for Azure Blob Storage using an "az" URI scheme.
- Support for RPCs and coordinate transformations and raster warping with RPCs.
- dst_path and dst_kwds parameters for rasterio's merge tool allow results to
  be written directly to a dataset.
- In "w" mode the driver keyword argument of open() may be omitted.
- transform_geom() has been optimized for sequences of geometries.

Bug fixes since 1.2b4:

- Fix dataset constructor so that tiled=False does the right thing (#2085).
- Allow WarpedVRT to default to using a source dataset's GCPs for
  georeferencing (#2086).
- Ensure that error handling environment is closed only after its dataset
  object is closed, preventing confusing error messages (#2088).
- Ensure WarpedVRT dataset objects are closed properly when exiting contexts
  (#2093).

1.2b4 (2021-01-20)
------------------

- The CRS definition saved in RGB.byte.tif has been updated so that it is
  identified as precisely EPSG:32618 by GDAL 3.2.1 (#2083).
- Remove non-breaking hyphens accidentally added to README, open the file with
  encoding="utf-8" when reading the description so that future UTF-8 chars
  don't break package setup.

1.2b3 (2021-01-11)
------------------
