@@ -6,25 +6,27 @@ import logging
 from logging import NullHandler
 from pathlib import Path
 
-from rasterio._base import gdal_version
-from rasterio.drivers import driver_from_extension, is_blacklisted
-from rasterio.dtypes import (
-    bool_, ubyte, sbyte, uint8, int8, uint16, int16, uint32, int32, float32, float64,
-    complex_, check_dtype)
-from rasterio.env import ensure_env_with_credentials, Env
-from rasterio.errors import RasterioIOError, DriverCapabilityError
-from rasterio.io import (
-    DatasetReader, get_writer_for_path, get_writer_for_driver, MemoryFile)
-from rasterio.profiles import default_gtiff_profile
-from rasterio.transform import Affine, guard_transform
-from rasterio.path import parse_path
+import rasterio._loading
+with rasterio._loading.add_gdal_dll_directories():
+    from rasterio._base import gdal_version
+    from rasterio.drivers import driver_from_extension, is_blacklisted
+    from rasterio.dtypes import (
+        bool_, ubyte, sbyte, uint8, int8, uint16, int16, uint32, int32, float32, float64,
+        complex_, check_dtype)
+    from rasterio.env import ensure_env_with_credentials, Env
+    from rasterio.errors import RasterioIOError, DriverCapabilityError
+    from rasterio.io import (
+        DatasetReader, get_writer_for_path, get_writer_for_driver, MemoryFile)
+    from rasterio.profiles import default_gtiff_profile
+    from rasterio.transform import Affine, guard_transform
+    from rasterio.path import parse_path
 
-# These modules are imported from the Cython extensions, but are also import
-# here to help tools like cx_Freeze find them automatically
-import rasterio._err
-import rasterio.coords
-import rasterio.enums
-import rasterio.path
+    # These modules are imported from the Cython extensions, but are also import
+    # here to help tools like cx_Freeze find them automatically
+    import rasterio._err
+    import rasterio.coords
+    import rasterio.enums
+    import rasterio.path
 
 __all__ = ['band', 'open', 'pad', 'Env']
 __version__ = "1.3dev"
