@@ -11,8 +11,10 @@ http://unidata.github.io/netcdf4-python/.
 """
 import os
 
-from rasterio._base import _raster_driver_extensions
-from rasterio.env import GDALVersion, ensure_env, require_gdal_version
+import rasterio._loading
+with rasterio._loading.add_gdal_dll_directories():
+    from rasterio._base import _raster_driver_extensions
+    from rasterio.env import GDALVersion, ensure_env, require_gdal_version
 
 # Methods like `rasterio.open()` may use this blacklist to preempt
 # combinations of drivers and file modes.
