@@ -8,17 +8,20 @@ import warnings
 
 import numpy as np
 
-import rasterio
-from rasterio.dtypes import validate_dtype, can_cast_dtype, get_minimum_dtype
-from rasterio.enums import MergeAlg
-from rasterio.env import ensure_env
-from rasterio.errors import ShapeSkipWarning
-from rasterio._features import _shapes, _sieve, _rasterize, _bounds
-from rasterio import warp
-from rasterio.rio.helpers import coords
-from rasterio.transform import Affine
-from rasterio.transform import IDENTITY, guard_transform, rowcol
-from rasterio.windows import Window
+
+import rasterio._loading
+with rasterio._loading.add_gdal_dll_directories():
+    import rasterio
+    from rasterio.dtypes import validate_dtype, can_cast_dtype, get_minimum_dtype
+    from rasterio.enums import MergeAlg
+    from rasterio.env import ensure_env
+    from rasterio.errors import ShapeSkipWarning
+    from rasterio._features import _shapes, _sieve, _rasterize, _bounds
+    from rasterio import warp
+    from rasterio.rio.helpers import coords
+    from rasterio.transform import Affine
+    from rasterio.transform import IDENTITY, guard_transform, rowcol
+    from rasterio.windows import Window
 
 log = logging.getLogger(__name__)
 
