@@ -12,9 +12,11 @@ import warnings
 
 import numpy as np
 
-import rasterio
-from rasterio.io import DatasetReader
-from rasterio.transform import guard_transform
+import rasterio._loading
+with rasterio._loading.add_gdal_dll_directories():
+    import rasterio
+    from rasterio.io import DatasetReader
+    from rasterio.transform import guard_transform
 
 logger = logging.getLogger(__name__)
 
