@@ -6,8 +6,10 @@ https://github.com/mapbox/rasterio/issues/1300.
 
 import json
 
-import rasterio
-from rasterio.features import dataset_features
+import rasterio._loading
+with rasterio._loading.add_gdal_dll_directories():
+    import rasterio
+    from rasterio.features import dataset_features
 
 
 class JSONSequenceTool(object):
